--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
     <h1>Hello!!!</h1>
     <h2>This is in branch2 yes hello</h2>
-    <h3>branch2 yes?</h3>
+    <h3>branch2 ye?</h3>
 </body>
 </html>
